--- a/.fusumarc.yml
+++ b/.fusumarc.yml
@@ -1,7 +1,7 @@
 meta:
   url:
-  title:
-  description:
+  title: What is Git & GitHub?
+  description: Introduction to Git & GitHub
   siteName:
   sns: ['twitter']
 slide:
