--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,16 @@
   "cSpell.words": [
     "Authy",
     "choco",
+    "drwx",
+    "drwxr",
+    "EDITMSG",
     "Enpass",
     "gitforwindows",
     "githubcom",
     "mkdir",
     "oneline",
     "Piyo",
+    "unstage",
     "wslgit"
   ]
 }
