--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "choco",
     "drwx",
     "drwxr",
+    "dthree",
     "EDITMSG",
     "Enpass",
     "gitforwindows",
@@ -11,6 +12,7 @@
     "mkdir",
     "oneline",
     "Piyo",
+    "Qiita",
     "unstage",
     "wslgit"
   ]
